anhand von kleukers guidelines refactored